Use JsonObject for ES instead of custom *ES objects This makes it easier to modify for legacy nested values.